--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,7 @@ jobs:
     needs:
       - determine-version
       - build
-    name: deploy ${{ needs.determine-version.outputs.semVer }}
+    name: release ${{ needs.determine-version.outputs.semVer }}
     permissions:
       contents: write
     env:
@@ -70,6 +70,7 @@ jobs:
       - uses: actions/checkout@v3  
         with:
           fetch-depth: 0
+      - run: echo "CURRENT_VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo '')" >> $GITHUB_ENV
       - name: Download package
         uses: actions/download-artifact@v2
         with:
@@ -84,15 +85,15 @@ jobs:
           custom-emoji: 'feature🌟,demographic👥,districtmap🗺️,electedtitle👑,electionprocess🗳️,constitution📜,govaccount🏦,law⚖️'
       - name: Get the changelog
         run: echo "${{ steps.changelog.outputs.changelog }}"
-  #     - name: Create Release
-  #       uses: ncipollo/release-action@v1
-  #       with:
-  #         artifacts: civics.json
-  #         allowUpdates: true
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         name: ${{ env.SEMVER }}
-  #         tag: ${{ env.SEMVER }}
-  #         body: |
-  #           Compare https://github.com/${{ github.repository }}/compare/${{ env.previous_tag }}...${{env.SEMVER}}
+      - name: Create Release
+        uses: ncipollo/release-action@v1
+        with:
+          artifacts: civics.json
+          allowUpdates: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+          name: ${{ env.SEMVER }}
+          tag: ${{ env.SEMVER }}
+          body: |
+            Compare https://github.com/${{ github.repository }}/compare/${{ env.CURRENT_VERSION }}...${{env.SEMVER}}
 
-  #           ${{ steps.changelog.outputs.changelog }}
+            ${{ steps.changelog.outputs.changelog }}
